/**
 * Copyright (C) 2009-2017 Typesafe Inc. <http://www.typesafe.com>
 * Copyright (C) 2013-2017 Akka.NET project <https://github.com/akkadotnet/akka.net>
 */

syntax = "proto3";
package Akka.Protobuf.Msg;
option optimize_for = SPEED;

message Payload {
  bytes enclosedMessage = 1;
  int32 serializerId = 2;
  bytes messageManifest = 3;
}

message ActorPath {
  string path = 1;
}

message ActorRef {
  string path = 1;
}

message Identify {
  Payload messageId = 1;
}

message ActorIdentity {
  Payload correlationId = 1;
  ActorRef ref = 2;
}

message PoisonPill { }

message Watch { 
  ActorRef watchee = 1;
  ActorRef watcher = 2;
}

message Unwatch { 
  ActorRef watchee = 1;
  ActorRef watcher = 2;
}

message DeathWatchNotification { 
  ActorRef ref = 1;
  bool existenceConfirmed = 2;
  bool addressTerminated = 3;
}

message Terminate { }

message Kill { }

message Supervise { 
  ActorRef child = 1;
  bool async = 2;
}

message Address {
  string protocol = 1;
  string system = 2;
  string host = 3;
  int32 port = 4;
}

message RemoteScope { 
  Address address = 1;
}